src/components/ToolMenu/index.less
.tool-menu {
  position: absolute;
  top: 0;
  left: 0;
  margin-top: var(--headerHeight);
  max-height: calc(100% - var(--headerHeight) - var(--footerHeight));
  overflow: hidden;
  max-width: 600px;
  min-width: 280px;
  box-shadow: var(--componentShadow);
  overflow-x: hidden;

  .ant-collapse-header-text {
    display: flex;
      width: 100%;

      svg {
        padding-top: 4px;
        flex: 2;
      }

      span {
        flex: 10;
      }
  }

  .react-geo-togglegroup.vertical-toggle-group {

    button {
      display: flex;
      width: 100%;

      svg {
        padding-top: 4px;
        flex: 2;
      }

      span {
        flex: 10;
      }
    }
  }

  &.collapsed {

    width: 40px;

    >.ant-collapse .ant-collapse-item {
      overflow: hidden;

      .ant-collapse-header {
        justify-content: center;
        padding: 6px 0px;

        .ant-collapse-header-text {
          display: flex;
          align-items: center;
          justify-content: center;
        }

        .ant-collapse-header-text>span:last-of-type,
        .ant-collapse-expand-icon {
          display: none;
        }
      }
    }
  }

  >.ant-collapse {
    border: none;
    max-height: calc(100vh - var(--headerHeight) - var(--footerHeight) - 32px);
    overflow-y: auto;

    .ant-collapse-item {

      .ant-collapse-header {
        background-color: #fff;
        padding: 6px 40px 6px 16px;

        .ant-collapse-header-text span {
          padding-left: 10px;
        }
      }

      .ant-collapse-content-box {
        padding: 10px;
        overflow-y: auto;

        .tool-menu-button {
          background-color: #efefef;
          width: 100%;

          svg.svg-inline--fa {
            margin-right: 5px;
          }
        }

        .tree-wrapper {
          display: flex;
          flex-direction: column;
          background-color: white;

        }
      }

      &.ant-collapse-item-active {
        .ant-collapse-header-text span {
          font-weight: bolder;
        }
      }
    }
  }

  button.collapse-btn {
    width: 100%;
    border: none;
    border-radius: 0;
  }

  .react-geo-togglebutton.btn-pressed {
    font-size: 1.2em;
    text-shadow: 0.5px 0.5px 0.5px grey;
  }
}

